--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -1,5 +1,5 @@
 [package]
-org = "oshada_kavintha"
+org = "CODE_SERANDIB"
 name = "stakeholder_management_backend"
 version = "0.1.0"
 distribution = "2201.10.0"
