--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -6,3 +6,10 @@ distribution = "2201.10.0"
 
 [build-options]
 observabilityIncluded = true
+
+[[platform.java17.dependency]]
+groupId = "io.ballerina.stdlib"
+artifactId = "persist.sql-native"
+version = "1.4.0"
+
+
