--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -20,6 +20,7 @@ dependencies = [
 	{org = "ballerina", name = "oauth2"},
 	{org = "ballerina", name = "sql"},
 	{org = "ballerina", name = "test"},
+	{org = "ballerina", name = "uuid"},
 	{org = "ballerinai", name = "observe"},
 	{org = "ballerinax", name = "java.jdbc"},
 	{org = "ballerinax", name = "mysql.driver"}
@@ -30,6 +31,7 @@ modules = [
 	{org = "CODE_SERANDIB", packageName = "stakeholder_management_backend", moduleName = "stakeholder_management_backend.risk_modeling"},
 	{org = "CODE_SERANDIB", packageName = "stakeholder_management_backend", moduleName = "stakeholder_management_backend.sign_in"},
 	{org = "CODE_SERANDIB", packageName = "stakeholder_management_backend", moduleName = "stakeholder_management_backend.sign_up"},
+	{org = "CODE_SERANDIB", packageName = "stakeholder_management_backend", moduleName = "stakeholder_management_backend.stakeholder_equilibrium"},
 	{org = "CODE_SERANDIB", packageName = "stakeholder_management_backend", moduleName = "stakeholder_management_backend.theoretical_depth"}
 ]
 
@@ -355,6 +357,20 @@ name = "url"
 version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "uuid"
+version = "1.8.0"
+dependencies = [
+	{org = "ballerina", name = "crypto"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.int"},
+	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerina", packageName = "uuid", moduleName = "uuid"}
 ]
 
 [[package]]
